给百度贴吧ID补上链接

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -25,7 +25,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">Blocksdata教程</div>
-	<div id="last_update">——更新日期 2017年5月5日——</div>
+	<div id="last_update">——更新日期 2017年5月11日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -49,7 +49,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			内容详解原表大致框架及翻译由百度贴吧-大王派提供，游戏1.22.7及以后更新内容和其他更多解释说明由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写。<br />
+			内容详解原表大致框架及翻译由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E5%A4%A7%E7%8E%8B%E6%B4%BE&ie=utf-8" target="_blank">大王派</a>提供，游戏1.22.7及以后更新内容和其他更多解释说明由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写。<br />
 			目前本页内容对应游戏2.0。<br />
 			为方便查看，所有英文属性名单词间已加上空格。
 			<script>if(isMobile == true){document.write("<br />提示：手机端建议横屏查看");}</script>
