--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -27,7 +27,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">CraftingRecipes解析</div>
-	<div id="last_update">——更新日期 2017年3月15日——</div>
+	<div id="last_update">——更新日期 2017年5月11日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -162,7 +162,7 @@
 			<div class="section" id="cont_2.1">
 				<h2>例一</h2>
 				<div class="content">
-					以下是由 百度贴吧-大王派 独创的大量合成表，有工具修复等方便生存模式的内容(从我的变态版4.0中提取的，默认产量已改为99)
+					以下是由 百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E5%A4%A7%E7%8E%8B%E6%B4%BE&ie=utf-8" target="_blank">大王派<a/> 独创的大量合成表，有工具修复等方便生存模式的内容(从我的变态版4.0中提取的，默认产量已改为99)
 				</div>
 				<div class="content">
 <pre class="language-markup line-numbers" ><code>&lt;Recipe Result="OakWoodBlock" ResultCount="99" RequiredHeatLevel="0" a="planks" b="oakleaves" Description="SMT"&gt;
@@ -294,7 +294,7 @@
 			<div class="section" id="cont_2.2">
 				<h2>例二</h2>
 				<div class="content">
-					以下是由 百度贴吧-清风明剑兮 制作的易风mod，用熊皮做货币，可以做各种交易
+					以下是由 百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E6%B8%85%E9%A3%8E%E6%98%8E%E5%89%91%E5%85%AE&ie=utf-8" target="_blank">清风明剑兮</a> 制作的易风mod，用熊皮做货币，可以做各种交易
 				</div>
 				<div class="content">
 <pre class="language-markup line-numbers" ><code>&lt;Recipe Result="SpruceLeavesBlock" ResultCount="40" RequiredHeatLevel="0" a="leather" Description=""&gt;
