添加总前言

--- a/index.html
+++ b/index.html
@@ -56,12 +56,16 @@
 				宗旨：深入研究Survivalcraft，使游戏更加有趣，多样化
 			</div>
 			<div class="content">
-				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组，欢迎感兴趣的人士加入<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=ff7d30bde77e41883745af6608e898c34b5fd5509e3d63fb7a1aa97425709657">QQ群-SC MOD交流群(SMT)</a>（群号302758716）交流mod！<br />
+				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组，欢迎感兴趣的人士加入<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=ff7d30bde77e41883745af6608e898c34b5fd5509e3d63fb7a1aa97425709657">QQ群-SC MOD制作交流群(SMT)</a>（群号302758716）交流mod！<br />
 			</div>
 			<div class="content">
 				网站开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
 				<script>if(String(document.location.href).indexOf("survivalcraft.cn") >= 0)document.write("，同时也是本在线版服务器提供者")</script><br />
 			</div>
+		</div>
+
+		<div class="chapter" style="height:120px;">
+			<div style="margin:0 auto 0 auto;width:364px;height:36px;font-size:32px;margin-top:42px;"><a href="preface.html">点我开始学习制作MOD！</a></div>
 		</div>
 
 		<script>
@@ -82,16 +86,20 @@
 			</div>
 			<div class="content">
 			本版本更新日期 2016年2月7日<br />
-			本版本mod教程对应Survivalcraft 1.29
+			本版本mod教程对应Survivalcraft 2.0
 			</div>
 		</div>
 
 		<div class="chapter">
 			<h1>使用提示</h1>
 			<div class="content">
-			左上角菜单键——导航目录（建议从上向下依次阅读）<br />
-			右上角菜单键——小节目录（内容过少时不显示）<br />
-			标题栏标题——返回顶部
+				<script>
+					if(isWideScreen){
+						document.write("左上角菜单键——导航目录<br />")
+					}
+				</script>
+				右上角菜单键——小节目录（内容过少时不显示）<br />
+				标题栏标题——返回顶部
 			</div>
 		</div>
 		<h1 style="text-align: center; margin-bottom:25px">转载请注明出处！</h1>
