“开始学习”按钮改为md按钮

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 			</div>
 		</div>
 
-		<div class="chapter" style="height:120px;">
-			<div style="margin:0 auto 0 auto;width:364px;height:36px;font-size:32px;margin-top:42px;"><a href="preface.html">点我开始学习制作MOD！</a></div>
+		<div class="chapter" style="padding-top:50px; padding-bottom:50px; text-align:center;">
+			<div class="md_btn" style="display:inline-block; font-size:32px; padding: 12px;" data-uri="preface.html">点我开始学习制作MOD！</div>
 		</div>
 
 		<script>
