--- a/nav_update.html
+++ b/nav_update.html
@@ -73,6 +73,64 @@
 			</div>
 		</div>
 		<div class="chapter">
+			<h1>2.9.9.9</h1>
+			<div class="content">
+				更新日期：2017年5月xx日<br />
+				<ul>
+					<li>导航内容
+						<ol>
+							<li>全面升级至对应游戏2.0</li>
+							<li>首页添加“点我开始学习制作MOD！”按钮，跳转至新增加的总前言</li>
+							<li>导航版本更新&amp;离线页加上体验站链接、详细更新日志链接</li>
+							<li>添加实例合集（目前包含扩大背包、添加方块例子）</li>
+							<li>“源代码”教程添加“附录.Android增加dll”</li>
+							<li>全面升级XML基础教程第一节</li>
+							<li>改进Windows基础教程</li>
+							<li>添加资源
+								<ul>
+									<li>安卓端资源：签名工具ApkCrack、有界面版scpak</li>
+									<li>Windows资源：dnSpy</li>
+									<li>通用资源：Blocksdata修改器、Guid查重器</li>
+									<li>修复失效的资源链接</li>
+								</ul>
+							</li>
+							<li>不再更新IOS资源、教程</li>
+						</ol>
+					</li>
+					<li>网页相关
+						<ol>
+							<li>新增功能
+								<ul>
+									<li>电脑版侧边栏根据窗口宽度自动显隐</li>
+									<li>表格展开折叠</li>
+									<li>按钮水波纹效果</li>
+									<li>页面渐显渐隐效果</li>
+								</ul>
+							</li>
+							<li>网页优化
+								<ul>
+									<li>动画效果</li>
+									<li>是否在线和浏览器的判断</li>
+									<li>顶栏标题和更新日期的位置、字体、动画</li>
+									<li>网页性能</li>
+								</ul>
+							</li>
+							<li>修复
+								<ul>
+									<li>文章倒序后滚动和菜单无法跳转问题</li>
+									<li>点击过快菜单不会隐藏问题</li>
+									<li>侧边栏按钮无效问题</li>
+									<li>部分贴吧ID没有对应链接</li>
+									<li>大量其他问题</li>
+								</ul>
+							</li>
+							<li>替换百度统计成谷歌统计，离线版不进行统计</li>
+						</ol>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="chapter">
 			<h1>2.7.7.12</h1>
 			<div class="content">
 				更新日期：2016年2月7日<br />
