修复大量资源链接
顺便加了和删了些资源，酷安完了~

--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">资源下载整合</div>
-	<div id="last_update">——更新日期 2017年5月5日——</div>
+	<div id="last_update">——更新日期 2017年5月23日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -80,7 +80,7 @@
 
 		<div class="chapter" id="cont_2">
 			<h1>第二节 安卓资源</h1>
-			<span style="font-size:10pt; display:block; font-weight:bold;">——以下大部分资源由酷市场提供，可以通过查看评论区很快地找到汉化版、破解版、去广告版</span>
+			<span style="font-size:10pt; display:block; font-weight:bold;">——以下大部分资源由酷市场、手机乐园提供，可以通过查看评论区很快地找到汉化版、破解版、去广告版</span>
 			<div class="section" id="cont_2.1">
 				<h2>1.文件管理</h2>
 				<div class="content">
@@ -88,15 +88,15 @@
 					可批量删除添加安装包内文件，需另外签名
 				</div>
 				<div class="content">
-					<a name="a_apk" href="http://www.coolapk.com/apk/cn.luomao.apkeditor" target="_blank">Apk编辑器</a><br />
-					单个单个文件替换，无需另外签名（可能在较高的安卓版本中无法使用），不支持安卓5.0及以上
+					<a name="a_apk" href="http://soft.shouji.com.cn/down/24971.html" target="_blank"><del>Apk编辑器</del></a><br />
+					单个单个文件替换，无需另外签名（可能在较高的安卓版本中无法使用），不支持安卓5.0及以上，建议使用其他
 				</div>
 				<div class="content">
 					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">ApkCrack</a><br />
 					当以上mt管理器和apk编辑器皆不能正常工作时，可尝试使用此软件
 				</div>
 				<div class="content">
-					<a name="a_apkmodifier" href="http://www.coolapk.com/apk/zhao.apkmodifier" target="_blank">ApkModifier</a><br />
+					<a name="a_apkmodifier" href="http://www.coolapk.com/apk/zhao.apkmodifier" target="_blank">ApkModifier</a>（推荐）<br />
 					Apk编辑器的“重制版”，支持安卓5.0及以上
 				</div>
 				<div class="content">
@@ -108,13 +108,13 @@
 			<div class="section" id="cont_2.2">
 				<h2>2.文本编辑</h2>
 				<div class="content">
-					<a name="a_quickedit" href="http://www.coolapk.com/apk/com.rhmsoft.edit" target="_blank">QuickEdit</a>（推荐）
+					<a name="a_quickedit" href="http://soft.shouji.com.cn/down/29779.html" target="_blank">QuickEdit</a>（推荐）
 				</div>
 				<div class="content">
-					<a name="a_920" href="http://www.coolapk.com/apk/com.jecelyin.editor" target="_blank">920文本编辑器</a>
+					<a name="a_920" href="http://soft.shouji.com.cn/down/22348.html" target="_blank">920文本编辑器</a>
 				</div>
 				<div class="content">
-					<a name="a_jota_plus" href="http://www.coolapk.com/apk/jp.sblo.pandora.jota.plus" target="_blank">jota+</a>
+					<a name="a_jota_plus" href="http://soft.shouji.com.cn/down/24381.html" target="_blank">jota+</a>
 				</div>
 			</div>
 
@@ -141,13 +141,13 @@
 			<div class="section" id="cont_2.4">
 				<h2>4.音频编辑</h2>
 				<div class="content">
-					<a href="http://www.coolapk.com/apk/com.imageline.FLM" target="_blank">FL studio</a>
+					<a href="https://play.google.com/store/apps/details?id=com.imageline.FLM" target="_blank">FL studio</a>
 				</div>
 			</div>
 			<div class="section" id="cont_2.5">
 				<h2>5.其他推荐</h2>
 				<div class="content">
-					<a name="a_lucky_patcher" href="http://www.coolapk.com/apk/com.android.vending.billing.InAppBillingService.LOCK" target="_blank">幸运破解器</a><br />
+					<a name="a_lucky_patcher" href="http://soft.shouji.com.cn/down/27921.html" target="_blank">幸运破解器</a><br />
 					安卓核心破解后可无视安装包签名直接安装，需root，<a href="android_tutorial.html#cont_3">详情</a>
 				</div>
 			</div>
@@ -213,11 +213,11 @@
 			<div class="section" id="cont_4.1">
 				<h2>1.文本编辑</h2>
 				<div class="content">
-					<a href="http://w.x.baidu.com/alading/anquan_soft_down_normal/13478">Notepad++</a>
+					<a href="https://notepad-plus-plus.org/download/v7.4.1.html">Notepad++</a>
 				</div>
 				<div class="content">
 					<a href="http://www.orsoon.com/soft/4791.html#xiazai">BeyondComparePro</a><br />
-					拥有强大的文本对比和文本合并功能
+					拥有强大的文本对比和文本合并功能,同时能对比文件夹
 				</div>
 			</div>
 			<div class="section" id="cont_4.3">
@@ -230,10 +230,10 @@
 			<div class="section" id="cont_4.4">
 				<h2>4.音频处理</h2>
 				<div class="content">
-					<a href="http://www.xiazaiba.com/html/26002.html" target="_blank">Audition</a>
+					<a href="http://www.ddooo.com/softdown/87869.htm" target="_blank">Audition CC 2017</a>
 				</div>
 				<div class="content">
-					<a href="http://www.smzy.com/smzy/smzy104333.html" target="_blank">FL studio</a>
+					<a href="https://www.image-line.com/downloads/flstudiodownload.html" target="_blank">FL studio</a>
 				</div>
 			</div>
 
@@ -277,12 +277,12 @@
 					一款基础的Android模拟器
 				</div>
 				<div class="content">
-					<a href="http://www.kaopu001.com" target="_blank">靠谱助手</a><br />
-					基于Bluestacks的一款多功能Android模拟器
-				</div>
-				<div class="content">
 					<a href="https://www.yeshen.com/" target="_blank">夜神安卓模拟器</a><br />
 					一款多功能Android模拟器
+				</div>
+				<div class="content">
+					<a href="https://www.xyaz.cn/" target="_blank">逍遥安卓模拟器</a><br />
+					一款多功能Android模拟器，此处可下载该模拟器的Android 5.1.1镜像：<a href="http://www.xyaz.cn/thread-4232-1-1.html">点我打开</a>
 				</div>
 			</div>
 
@@ -293,7 +293,7 @@
 					IOS设备与pc连接必备
 				</div>
 				<div class="content">
-					<a name="w_pp" href="http://ghost.25pp.com/soft/ppsetup.exe">PP助手</a><br />
+					<a name="w_pp" href="https://pro.25pp.com/">PP助手</a><br />
 					与IOS设备传输文件
 				</div>
 				<div class="content">
