修改导航更新日期

--- a/nav_update.html
+++ b/nav_update.html
@@ -29,7 +29,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">导航版本更新&amp;离线</div>
-	<div id="last_update">——更新日期 2017年3月15日——</div>
+	<div id="last_update">——更新日期 2017年5月23日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -75,7 +75,7 @@
 		<div class="chapter">
 			<h1>2.9.9.9</h1>
 			<div class="content">
-				更新日期：2017年5月xx日<br />
+				更新日期：2017年5月23日<br />
 				<ul style="text-indent:20px;">
 					<li>导航内容
 						<ol style="text-indent:40px;">
