更新游戏2.1可用的解包打包器以及修改和删除部分资源

--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">资源下载整合</div>
-	<div id="last_update">——更新日期 2017年5月23日——</div>
+	<div id="last_update">——更新日期 2017年7月22日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -71,8 +71,8 @@
 			<div class="section" id="cont_1.2">
 				<h2>2.非正版</h2>
 				<div class="content">
-					<a href="http://www.coolapk.com/game/com.candyrufusgames.survivalcraft2" target="_blank">Survivalcraft2 on 酷安网</a>（Android版）<br />
-					<a href="https://pan.baidu.com/share/link?shareid=3319882865&uk=2788149454" target="_blank">SC with JS 2.0.30</a>（Windows版）<br />
+					<a href="http://www.wandoujia.com/apps/com.candyrufusgames.survivalcraft2" target="_blank">Survivalcraft2 on 豌豆荚</a>（Android版）<br />
+					<a href="https://tieba.baidu.com/p/5201426501" target="_blank">SC with JS 2.1.21</a>（Windows版）<br />
 					<a href="http://tieba.baidu.com/f?kw=%E7%94%9F%E5%AD%98%E6%88%98%E4%BA%89&ie=utf-8&tab=good&cid=7" target="_blank">百度贴吧-生存战争吧-精品区-资源下载</a><br />
 				</div>
 			</div>
@@ -88,16 +88,16 @@
 					可批量删除添加安装包内文件，需另外签名
 				</div>
 				<div class="content">
-					<a name="a_apk" href="http://soft.shouji.com.cn/down/24971.html" target="_blank"><del>Apk编辑器</del></a><br />
-					单个单个文件替换，无需另外签名（可能在较高的安卓版本中无法使用），不支持安卓5.0及以上，建议使用其他
-				</div>
-				<div class="content">
-					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">ApkCrack</a><br />
+					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">ApkCrack</a>（推荐）<br />
 					当以上mt管理器和apk编辑器皆不能正常工作时，可尝试使用此软件
 				</div>
 				<div class="content">
-					<a name="a_apkmodifier" href="http://www.coolapk.com/apk/zhao.apkmodifier" target="_blank">ApkModifier</a>（推荐）<br />
-					Apk编辑器的“重制版”，支持安卓5.0及以上
+					<a name="a_apk" href="http://soft.shouji.com.cn/down/24971.html" target="_blank"><del>Apk编辑器</del></a><br />
+					<del>单个单个文件替换，无需另外签名（可能在较高的安卓版本中无法使用），不支持安卓5.0及以上，建议使用其他</del>
+				</div>
+				<div class="content">
+					<a name="a_apkmodifier" href="http://www.coolapk.com/apk/zhao.apkmodifier" target="_blank">ApkModifier</a><br />
+					Apk编辑器的第三方“重制版”，支持安卓5.0及以上
 				</div>
 				<div class="content">
 					<a href="http://www.coolapk.com/apk/com.estrongs.android.pop" target="_blank">ES文件管理器</a><br />
@@ -112,9 +112,6 @@
 				</div>
 				<div class="content">
 					<a name="a_920" href="http://soft.shouji.com.cn/down/22348.html" target="_blank">920文本编辑器</a>
-				</div>
-				<div class="content">
-					<a name="a_jota_plus" href="http://soft.shouji.com.cn/down/24381.html" target="_blank">jota+</a>
 				</div>
 			</div>
 
@@ -154,12 +151,12 @@
 			<div class="section" id="cont_2.6">
 				<h2>6.解包打包工具</h2>
 				<div class="content">
-					<a name="pakchuliqi" href="http://pan.baidu.com/share/link?shareid=1066340296&uk=2788149454" target="_blank">pak处理器</a><br />
-					感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
+					<a name="scpak_android" href="https://tieba.baidu.com/p/4956757811" target="_blank">scpak</a>（安卓有界面版）<br />
+					由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，界面由百度贴吧-<a href="https://tieba.baidu.com/home/main?un=lixue_jiu&ie=utf-8" target="_blank">lixue_jiu</a>开发，为<a href="#cont_4.9">SCPacker</a>的第二代，可将Content/Fonts中的字库文件和Content/Audio中的音频文件解开。注：解包后的图片为png格式，暂不支持解包游戏2.1版本的Content.pak，另有<a href="#cont_4.9">Windows版</a><br />
 				</div>
 				<div class="content">
-					<a name="scpak_android" href="https://tieba.baidu.com/p/4956757811" target="_blank">scpak</a>（安卓有界面版）<br />
-					由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，界面由百度贴吧-<a href="https://tieba.baidu.com/home/main?un=lixue_jiu&ie=utf-8" target="_blank">lixue_jiu</a>开发，为<a href="#cont_4.9">SCPacker</a>的第二代，可将Content/Fonts中的字库文件和Content/Audio中的音频文件解开。注：解包后的图片为png格式，另有<a href="#cont_4.9">Windows版</a><br />
+					<a href="http://pan.baidu.com/share/link?shareid=4156807553&uk=2788149454" target="_blank">SCPacker</a><br />
+					第一代解包打包工具的安卓版，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 的开发，以及百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E4%BF%AE%E6%94%B9%E6%98%AF%E7%A7%8D%E4%B9%90%E8%B6%A3&ie=utf-8" target="_blank">修改是种乐趣</a>的更新和提供。注：解包后的图片为png格式，但不支持透明像素，另有<a href="#cont_4.9">Windows版</a><br />
 				</div>
 			</div>
 		</div>
@@ -277,10 +274,6 @@
 					一款基础的Android模拟器
 				</div>
 				<div class="content">
-					<a href="https://www.yeshen.com/" target="_blank">夜神安卓模拟器</a><br />
-					一款多功能Android模拟器
-				</div>
-				<div class="content">
 					<a href="https://www.xyaz.cn/" target="_blank">逍遥安卓模拟器</a><br />
 					一款多功能Android模拟器，此处可下载该模拟器的Android 5.1.1镜像：<a href="http://www.xyaz.cn/thread-4232-1-1.html">点我打开</a>
 				</div>
@@ -306,10 +299,6 @@
 			<div class="section">
 				<h2>8.WindowsPhone相关</h2>
 				<div class="content">
-					<a href="http://www.cr173.com/soft/33647.html" target="_blank">Windows Phone SDK 7.1.1</a><br />
-					Windows7及以上使用，内附WindowsPhone模拟器以及xap部署工具
-				</div>
-				<div class="content">
 					<a href="http://dev.windows.com/zh-cn/develop/download-phone-sdk/">Windows Phone SDK 8.1</a><br />
 					Windows8及以上使用
 				</div>
@@ -328,8 +317,8 @@
 			<div class="section" id="cont_4.9">
 				<h2>9.解包打包工具</h2>
 				<div class="content">
-					<a href="http://pan.baidu.com/share/link?shareid=711454717&uk=2788149454">SCPacker</a><br />
-					第一代解包打包工具，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 的开发和提供！注：解包后的图片为png格式，但不支持透明像素
+					<a href="http://pan.baidu.com/share/link?shareid=1400341358&uk=2788149454">SCPacker</a><br />
+					第一代解包打包工具，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 的开发和提供，以及百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E4%BF%AE%E6%94%B9%E6%98%AF%E7%A7%8D%E4%B9%90%E8%B6%A3&ie=utf-8" target="_blank">修改是种乐趣</a>的更新。注：解包后的图片为png格式，但不支持透明像素，另有<a href="#cont_2.6">安卓版</a>
 				</div>
 				<div class="content">
 					<a href="https://github.com/qnnnnez/scpak/releases">scpak</a>（Windows版）<br />
