小修改方块属性说明

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -163,22 +163,22 @@
 						<td></td>
 						<td>Vector3</td>
 						<td>Default Icon Block Offset</td>
-						<td>默认图标偏移</td>
-						<td></td>
+						<td>默认图标方块偏移</td>
+						<td>待研究</td>
 					</tr>
 					<tr>
 						<td></td>
 						<td>Vector3</td>
 						<td>Default Icon View Offset</td>
-						<td>默认图标偏移</td>
-						<td></td>
+						<td>默认图标视角偏移</td>
+						<td>在物品栏显示的位置偏移</td>
 					</tr>
 					<tr>
 						<td></td>
 						<td>float</td>
 						<td>Default Icon View Scale</td>
 						<td>默认图标视角大小缩放</td>
-						<td>在物品栏里显示的大小</td>
+						<td>在物品栏里显示的大小缩放倍数</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -346,7 +346,7 @@
 						<td>float</td>
 						<td>Object Shadow Strength</td>
 						<td>物体阴影强度</td>
-						<td></td>
+						<td>待研究</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -469,7 +469,7 @@
 						<td></td>
 						<td>float</td>
 						<td>Default Melee Power</td>
-						<td>打击(近战)攻击力</td>
+						<td>近战(打击)攻击力</td>
 						<td></td>
 					</tr>
 					<tr>
@@ -477,7 +477,7 @@
 						<td>float</td>
 						<td>Default Melee Hit Probability</td>
 						<td>默认近战击中概率</td>
-						<td>在1.27某些版本中，它处于DefaultMeleePower与DefaultProjectilePower之间，现已消失</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td></td>
@@ -607,7 +607,7 @@
 					</tr>
 					<tr>
 						<td></td>
-						<td>BlockDigMethod</td>
+						<td>BlockDig<br />Method</td>
 						<td>Dig Method</td>
 						<td>挖掘方法</td>
 						<td>取消挖掘透明这里至少要选一种工具</td>
