--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -90,7 +90,7 @@
 					</tr>
 					<tr>
 						<td>Vector3</td>
-						<td>三维数组</td>
+						<td>三维向量</td>
 						<td>逗号分隔的三个float（单精度浮点数）</td>
 					</tr>
 					<tr>
@@ -100,8 +100,8 @@
 					</tr>
 					<tr>
 						<td>FoodType</td>
-						<td>方块挖掘方法</td>
-						<td>None（无）、Meat（肉）、FIsh（鱼肉）、Fruit（水果）、Grass（草）、Bread（面包）</td>
+						<td>食物种类</td>
+						<td>None（无）、Meat（肉）、Fish（鱼肉）、Fruit（水果）、Grass（草）、Bread（面包）</td>
 					</tr>
 				</table>
 			</div>
@@ -233,8 +233,8 @@
 						<td></td>
 						<td>int</td>
 						<td>Default Creative Data</td>
-						<td>默认创造模式是否提供</td>
-						<td>-1不提供，0创造模式免费提供</td>
+						<td>默认创造模式数据</td>
+						<td>小于0不提供，反之创造模式提供data为该值的方块</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -268,7 +268,7 @@
 						<td></td>
 						<td>bool</td>
 						<td>Default Is Interactive</td>
-						<td>默认是否交互</td>
+						<td>默认是否可交互</td>
 						<td>电器此项为TRUE，但改了没任何效果</td>
 					</tr>
 					<tr>
@@ -304,7 +304,7 @@
 						<td>bool</td>
 						<td>Kills When Stuck</td>
 						<td>卡住时杀死卡在其中的实体</td>
-						<td>仙人掌和倒刺板该值为TRUE</td>
+						<td>仙人掌和倒刺板该值为TRUE，改其他物品无效果</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -346,7 +346,7 @@
 						<td>float</td>
 						<td>Object Shadow Strength</td>
 						<td>物体阴影强度</td>
-						<td>待研究</td>
+						<td>数值范围0到1，设置里启用Object Shadows且视角距离不超过32时将产生阴影，0表示无阴影</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -381,7 +381,7 @@
 						<td>int</td>
 						<td>Max Stacking</td>
 						<td>最大背包堆叠</td>
-						<td>箱子,工作台和火炉里可以堆叠的数量</td>
+						<td>箱子,工作台,发射器和火炉里可以堆叠的数量</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -395,7 +395,7 @@
 						<td>float</td>
 						<td>Sleep Suitability</td>
 						<td>适合睡觉</td>
-						<td>0.5好像是最适合，0代表不能睡</td>
+						<td>数值范围0到1，一般为0.5，家具地毯该值为1，0不能睡</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -409,7 +409,7 @@
 						<td>float</td>
 						<td>Density</td>
 						<td>密度</td>
-						<td>物品掉落水中浮沉的指标</td>
+						<td>物品掉落水中浮沉的指标，单位g/cm³</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -477,7 +477,7 @@
 						<td>float</td>
 						<td>Default Melee Hit Probability</td>
 						<td>默认近战击中概率</td>
-						<td></td>
+						<td>数值范围0到1</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -505,7 +505,7 @@
 						<td>int</td>
 						<td>Durability</td>
 						<td>工具耐久度</td>
-						<td>即使用次数，留空或-1将无耐久度</td>
+						<td>即使用次数（超过65535报错，实际最大值4095），留空或-1将无耐久度</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -544,17 +544,17 @@
 					</tr>
 					<tr>
 						<td></td>
-						<td>Vector3</td>
+						<td>float</td>
 						<td>Projectile Tip Offset</td>
 						<td>扔出点偏移</td>
-						<td>待研究</td>
+						<td>数值范围0到1，待研究</td>
 					</tr>
 					<tr>
 						<td></td>
 						<td>bool</td>
 						<td>Disintegrates On Hit</td>
 						<td>撞击时碎裂</td>
-						<td>蛋的此属性为TRUE</td>
+						<td>雪球、蛋的此属性为TRUE</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -624,7 +624,7 @@
 						<td>float</td>
 						<td>Projectile Resilience</td>
 						<td>弹射物抗性</td>
-						<td>越大越不容易被矛等投掷出的物品砸破</td>
+						<td>数值范围0到1，越大越不容易被矛等投掷出的物品砸破</td>
 					</tr>
 					<tr>
 						<td></td>
