--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -143,7 +143,7 @@
 						<td>string</td>
 						<td>Default Category</td>
 						<td>默认类别</td>
-						<td>帮助中的类别</td>
+						<td>帮助中的类别，可自定义新类别</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -164,7 +164,7 @@
 						<td>Vector3</td>
 						<td>Default Icon Block Offset</td>
 						<td>默认图标方块偏移</td>
-						<td>待研究</td>
+						<td>方块图标的位置偏移</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -346,7 +346,7 @@
 						<td>float</td>
 						<td>Object Shadow Strength</td>
 						<td>物体阴影强度</td>
-						<td>数值范围0到1，设置里启用Object Shadows且视角距离不超过32时将产生阴影，0表示无阴影</td>
+						<td>数值范围0到1，设置里启用Object Shadows且视角距离不超过32时该方块上的实体产生阴影的强度</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -402,7 +402,7 @@
 						<td>float</td>
 						<td>Friction Factor</td>
 						<td>（行走）摩擦系数</td>
-						<td>越小越滑，为0时无法走动</td>
+						<td>越小越滑，越大走得越慢，为0时无法走动</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -451,7 +451,7 @@
 						<td>float</td>
 						<td>Shovel Power</td>
 						<td>铲子效率</td>
-						<td rowspan=3>各种工具（ShovelPower等）是挖掘速度（每秒）（不含反应/识别时间）例如Quarry Power是20的工具挖Dig Resilience是60的方块要3秒空手的速度目前测得全部为1</td>
+						<td rowspan="3">各种工具（ShovelPower等）是挖掘速度（每秒）（不含反应/识别时间）例如Quarry Power是20的工具挖Dig Resilience是60的方块要3秒空手的速度目前测得全部为1</td>
 					</tr>
 					<tr>
 						<td></td>
