--- a/logo.html
+++ b/logo.html
@@ -6,9 +6,7 @@
 	<title>SMT Logo 2014</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
-	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
-	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
-	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
+	<script>document.write("<script src='js/version.js?" + Math.random() + "'><\/script>");</script>
 	<style>
 		.saimg {
 			margin: 0 auto;
@@ -22,7 +20,7 @@
 		#content_box .content div {
 			text-align:center;
 		}
-	</style>	<script>document.write("<script src='js/preload.js?" + ver + "'><" + "/script>");</script>
+	</style>
 </head>
 
 <body>
@@ -109,6 +107,6 @@
 	</div>
 </div>
 
-<script>document.write("<script src='js/delayload.js?" + ver + "'><" + "/script>");</script>
+<script>document.write("<script src='js/delayload.js?" + ver + "'><\/script>");</script>
 </body>
 </html>
