预加载脚本移到version.js

--- a/nav_update.html
+++ b/nav_update.html
@@ -6,15 +6,12 @@
 	<title>导航版本更新</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
-	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
-	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
-	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
+	<script>document.write("<script src='js/version.js?" + Math.random() + "'><\/script>");</script>
 	<style>
 		#content_box .content {
 			margin-left: 20px;
 		}
 	</style>
-	<script>document.write("<script src='js/preload.js?" + ver + "'><" + "/script>");</script>
 </head>
 
 <body>
@@ -237,6 +234,6 @@
 	</div>
 </div>
 
-<script>document.write("<script src='js/delayload.js?" + ver + "'><" + "/script>");</script>
+<script>document.write("<script src='js/delayload.js?" + ver + "'><\/script>");</script>
 </body>
 </html>
