--- a/preface.html
+++ b/preface.html
@@ -6,10 +6,7 @@
 	<title>总前言</title>
 	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
-	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
-	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
-	<script>document.write("<link id='css_article' href='css/article.css?" + ver + "' rel='stylesheet' type='text/css' />")</script>
-	<script>document.write("<script src='js/preload.js?" + ver + "'><" + "/script>");</script>
+	<script>document.write("<script src='js/version.js?" + Math.random() + "'><\/script>");</script>
 	<script>
 		if (!isOnline && navigator.onLine){
 			document.write("<script src='http://smt.survivalcraft.cn/js/online_version.js?" + Math.random() +  "'><"+"/script>");
@@ -86,6 +83,6 @@
 	</div>
 </div>
 
-<script>document.write("<script src='js/delayload.js?" + ver + "'><" + "/script>");</script>
+<script>document.write("<script src='js/delayload.js?" + ver + "'><\/script>");</script>
 </body>
 </html>
