修改默认掉落数量的数据类型和说明

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -354,10 +354,10 @@
 					</tr>
 					<tr>
 						<td>33</td>
-						<td>int</td>
+						<td>float</td>
 						<td>Default Drop Count</td>
 						<td>默认掉落数量</td>
-						<td></td>
+						<td>整数部分为最少掉落数量，小数部分为额外掉落一个的概率</td>
 					</tr>
 					<tr>
 						<td></td>
