修复细节问题

--- a/windows_tutorial.html
+++ b/windows_tutorial.html
@@ -85,7 +85,7 @@
 			<div class="section" id="cont_2.3">
 				<h2>3.替换Content</h2>
 				<div class="content">
-					打开SurvivalcraftAppX文件夹，，就可以看到Content.pak了，之前的<a href="content_folder_tutorial.html">Content解析</a>已对它进行讲解，此不复述，接下来把修改好的Content.pak复制粘贴到此，即可直接打开游戏对mod进行测试<br />
+					打开SurvivalcraftAppX文件夹，就可以看到Content.pak了，之前的<a href="content_folder_tutorial.html">Content解析</a>已对它进行讲解，此不复述，接下来把修改好的Content.pak复制粘贴到此，即可直接打开游戏对mod进行测试<br />
 				</div>
 			</div>
 			<div class="section" id="cont_2.4">
@@ -106,7 +106,7 @@
 				</div>
 			</div>
 			<div class="content">
-					要将已完成的作品分享给别人，可以直接分享已完成的Content.pak让他人自行替换，也可以将整个游戏安装目录（包含SurvivalcraftAppX文件夹和一个后缀为ps1的文件夹）压缩成单独一个文件再进行分享
+				要将已完成的作品分享给别人，可以直接分享已完成的Content.pak让他人自行替换，也可以将整个游戏安装目录（包含SurvivalcraftAppX文件夹和一个后缀为ps1的文件夹）压缩成单独一个文件再进行分享
 			</div>
 		</div>
 		<br />
