提示前往新版导航

--- a/examples_collection.html
+++ b/examples_collection.html
@@ -236,6 +236,7 @@ namespace Game
 				<img class="saimg magnifiable"
         data-online="https://raw.githubusercontent.com/lzm956902416/SMT/master/saimg/examples_02_04.png"
         data-offline="saimg/examples_02_04.png" />
+        注：新添加方块的Blocksdata中的Display Order和“源代码”中的Index可以不相同，注意不要和已存在方块的重复
 			</div>
 		</div>
 		<br />
